Update Application Task 01.ipynb

--- a/Application Task 01.ipynb
+++ b/Application Task 01.ipynb
@@ -151,7 +151,7 @@
     "# Get the positions at which a Levenshtein distance of 1 is observed\n",
     "LS_1_pos = [LS_dist == 1 for LS_dist in LS_distances]\n",
     "\n",
-    "# Get a list cpntaining the unique names in the list of dognames for which a Levenshtein distance of 1 to 'Luca' is observed\n",
+    "# Get a list containing the unique names in the list of dognames for which a Levenshtein distance of 1 to 'Luca' is observed\n",
     "dognames_df.loc[LS_1_pos, 'HUNDENAME'].unique().tolist()"
    ]
   }
