Update Application Task 01.ipynb
Adjusted a comment

--- a/Application Task 01.ipynb
+++ b/Application Task 01.ipynb
@@ -145,7 +145,7 @@
     "# Extract a list containing all dognames\n",
     "dognames = dognames_df['HUNDENAME'].copy().values\n",
     "\n",
-    "# Calculate the Levenshtein distance for each dogname in the list and store the resulting values in the variable LS_distances\n",
+    "# Calculate the Levenshtein distance to the string 'Luca' for each dogname in the list and store the resulting values in the variable LS_distances\n",
     "LS_distances = [Levenshtein.distance(name, 'Luca') for name in dognames]\n",
     "\n",
     "# Get the positions at which a Levenshtein distance of 1 is observed\n",
